--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
           <h1 class="display-4 text-white mt-5 mb-2">Evaluación del impacto de la plataforma web sobre la empres Movistar</h1>
-          <p class="lead mb-5 text-white-50"> Recopilando todos los datos obtenidos hasta el momento sobre diferentes variables, para estimar cual es el impacto de la plataforma web sobre Movistar.<a class="nav-link" href="https://informemovistar.github.io/evaluacion_mejora_web/#">Ver mas</a></p>
+          <p class="lead mb-5 text-white-50"> Recopilando todos los datos obtenidos hasta el momento sobre diferentes variables, para estimar cual es el impacto de la plataforma web sobre Movistar.<a class="nav-link text-white" href="https://informemovistar.github.io/evaluacion_mejora_web/#">Ver mas</a></p>
         </div>
       </div>
     </div>
@@ -62,11 +62,10 @@
 
     <div class="row">
       <div class="col-md-8 mb-5">
-        <h2>What We Do</h2>
+        <h2>¿qué buscamos hacer?</h2>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt neque tempore recusandae animi soluta quasi? Asperiores rem dolore eaque vel, porro, soluta unde debitis aliquam laboriosam. Repellat explicabo, maiores!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis optio neque consectetur consequatur magni in nisi, natus beatae quidem quam odit commodi ducimus totam eum, alias, adipisci nesciunt voluptate. Voluptatum.</p>
-        <a class="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a>
+        <p>Dar a conocer a diferentes empresas e investigadores, los resultados de las medidas del impacto de la plataforma web,  tomadas bajo diferentes variables de medicion de calidad</p>
+        <a class="btn btn-primary btn-lg" href="#">Ver mas &raquo;</a>
       </div>
       <div class="col-md-4 mb-5">
         <h2>Contact Us</h2>
